# STS2_Skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISH.md  README.en.md  README.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.6.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  SECURITY.md  VERSION_MIGRATION.md  compat.yaml  config.example.yaml  hermes_constants.py  install.bat  install.ps1  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  host_integration.yml
.github/workflows/: ci.yml  release.yml
docs/: AUTOMATION_BUG_HUNT.md  CLASSMATE_SETUP.md  CRITICAL_BUG_AUTOMATION.md  QUICKSTART.md
mods/STS2MCP/: README.md  STS2_MCP.json
patches/: 0001-feat-configurable-playable-character-for-autoplay-an.patch
plugins/sts2/: README.md  __init__.py  act1_agent.py  act1_clear.py  act1_policy.py  action_trace.py  action_validate.py  agent_contract.py  agent_learn.py  auto_repair.py  autonomy.py  autoplay.py  build_analyzer.py  build_knowledge.py  bundle_select_brain.py  card_pick_brain.py  character_choice.py  cli.py  cli_standalone.py  client.py  coach_channel.py  combat_brain.py  combat_brief.py  combat_damage.py  combat_line_planner.py  combat_play_brain.py  combat_resources.py  combat_scorer.py  combat_state_machine.py  combat_survival_gate.py  combat_turn_plan.py  config.py  crystal_sphere.py  decision.py  decision_context.py  doctor.py  driver_lock.py  evolution_loop.py  hand_select_brain.py  host_config.py  (+54 more)
plugins/sts2/game_flow_kb/: __init__.py  ascension.py  brief.py  event_lookup.py  hand_turn_plan.py  merchant.py  store.py  wiki_rules.py
plugins/sts2/huiji_kb/: __init__.py  client.py  loops.py  parse.py  store.py  sync.py
plugins/sts2/integrations/: __init__.py  host_setup.py  mcp_config.py
plugins/sts2/integrations/astrbot/: README.md  mcp-server.example.json
plugins/sts2/integrations/openclaw/: README.md  mcp-server.example.json
plugins/sts2/mechanics_kb/: __init__.py  brief.py  context.py  damage_engine.py  power_parse.py  relic_lookup.py  store.py  sync.py
plugins/sts2/references/: builds_catalog.json  enemy_mechanics.json  ironclad_builds.md  playbook.md  sts2_ironclad_guide.md  upgrade_priority.json
plugins/sts2/wiki_crawl/: __init__.py  crawler.py  extractors.py  integrate.py  list_index.py  lookup.py  parser.py
scripts/: build_install_exe.py  build_release_assets.py  detect_install_paths.py  install_probe_cli.py  install_sts2_mcp_mod.py  pack_install_payload.py  publish_release.ps1  publish_release_api.py  release.ps1  release_notes_path.py  sts2_host_setup_cli.py  sts2_install_launcher.py  sts2_mcp_bridge.py  sts2_setup_wizard.py  sync-version.ps1
scripts/install_stub/: Deployer.cs  EnvironmentProbe.cs  I18n.cs  InstallLauncher.csproj  MainForm.cs  PathHelper.cs  Program.cs
skills/slay-the-spire-2/: SKILL.md
tests/: conftest.py  test_repo_meta.py
tests/plugins/: test_sts2_character_choice.py  test_sts2_doctor.py  test_sts2_host_integration.py  test_sts2_host_setup.py  test_sts2_install_probe.py  test_sts2_mode_display.py  test_sts2_paths_config.py  test_sts2_platform_home.py  test_sts2_play_mode.py  test_sts2_plugin.py  test_sts2_process_lock.py
tests/scripts/: test_detect_install_paths.py  test_sts2_host_setup_cli.py
(+352 files in other folders)
