[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sts2-skills"
version = "1.0.4"
description = "Slay the Spire 2 agent bridge — STS2MCP tools for Hermes, OpenClaw, and AstrBot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "STS2_Skills contributors" }]
keywords = ["sts2", "slay-the-spire", "mcp", "hermes", "openclaw", "astrbot", "gaming"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2"]
hermes = ["hermes-agent>=0.13"]
llm = ["openai>=1.0,<2"]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/sakikoTGW/STS2_Skills"
Repository = "https://github.com/sakikoTGW/STS2_Skills"
Issues = "https://github.com/sakikoTGW/STS2_Skills/issues"
Changelog = "https://github.com/sakikoTGW/STS2_Skills/blob/main/CHANGELOG.md"

[project.scripts]
sts2 = "plugins.sts2.cli_standalone:main"
sts2-mcp = "plugins.sts2.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plugins*"]

[tool.setuptools.package-data]
"plugins.sts2" = [
  "plugin.yaml",
  "references/**/*",
  "integrations/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["plugins", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
